fix scrollbar in dark mood

--- a/src/index.sass
+++ b/src/index.sass
@@ -90,20 +90,20 @@ button:focus-visible
 
 /* شريط التمرير الأساسي (Chrome, Edge, Safari) */
 ::-webkit-scrollbar
-  width: 10px
+  width: 18px
   background: #fff
 
 /* مقبض شريط التمرير */
 ::-webkit-scrollbar-thumb
   background: #ccc
-  border-radius: 8px
+  border-radius: 12px
 
 ::-webkit-scrollbar-thumb:hover
   background: #bbb
 
 /* شريط التمرير في فايرفوكس */
 *
-  scrollbar-width: thin
+  scrollbar-width: thick
   scrollbar-color: #ccc #fff
 
 @media (prefers-color-scheme: light)
